[add]增加登录信号处理机制

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ SECRET_KEY="django-insecure-x7)v1+((6h0-%bng7l4d%*0s9zsx(58tm5#e*xbaoh7_4#j3qi"
 DEBUG=True
 
 # redis配置
+USE_REDIS=True
 REDIS_HOST="redis://127.0.0.1:6379/1"
 # REDIS_PASSWORD="redishongkong"
