--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -23,13 +23,31 @@ jobs:
         run: docker-compose build
 
       # 检查镜像是否能成功启动一个容器
-      - name: Run Docker container to check status
+      - name: Run Docker container
         run: docker-compose up -d
+      
+      # 检查容器状态
+      - name: Check container status
+        id: container_status
+        run: |
+          CONTAINER_NAME=$(docker-compose ps -q | head -n 1)
+          if [ -z "$CONTAINER_NAME" ]; then
+            echo "No containers found, failing the step."
+            exit 1
+          fi
+          STATUS=$(docker inspect -f '{{.State.Running}}' "$CONTAINER_NAME")
+          if [ "$STATUS" != "true" ]; then
+            echo "Container is not running, failing the step."
+            exit 1
+          fi
+          echo "Container is running successfully."
 
       # 登录 Docker Hub
       - name: Docker login
-        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ vars.DOCKER_HUB_PASSWORD }}" --password-stdin
+        if: success()
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ vars.DOCKER_HUB_USERNAME }}" --password-stdin
 
       # 推送镜像到 Docker Hub
       - name: Push Docker image to Docker Hub
+        if: success()
         run: docker push immrk/pure-drf-api:latest
