[fix]自动部署文件格式错误

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -2,8 +2,9 @@ name: Deploy DRF Application
 
 on:
   push:
-    branches: [dev]
-  paths-ignore:
+    branches: 
+      - dev
+    paths-ignore:
       - 'readme.md'
 
 jobs:
