[fix]修复部署文件检查容器状态报错

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Check container status
         id: container_status
         run: |
-          CONTAINER_NAME=$(docker-compose ps -q | head -n 1)
+          CONTAINER_NAME=$(docker-compose -f docker-compose-dev.yml ps -q | head -n 1)
           if [ -z "$CONTAINER_NAME" ]; then
             echo "No containers found, failing the step."
             exit 1
