--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -3,12 +3,12 @@ name: Deploy DRF Application
 on:
   push:
     branches: 
-      - dev
+      - main
     paths-ignore:
       - 'readme.md'
   pull_request:
     branches:
-      - dev
+      - main
     paths-ignore:
       - 'readme.md'
 
@@ -28,17 +28,17 @@ jobs:
 
       # 构建 Docker 镜像
       - name: Build Docker image
-        run: docker-compose -f docker-compose-dev.yml build
+        run: docker-compose -f docker-compose-prod.yml build
 
       # 检查镜像是否能成功启动一个容器
       - name: Run Docker container
-        run: docker-compose -f docker-compose-dev.yml up -d
+        run: docker-compose -f docker-compose-prod.yml up -d
       
       # 检查容器状态
       - name: Check container status
         id: container_status
         run: |
-          CONTAINER_NAME=$(docker-compose -f docker-compose-dev.yml ps -q | head -n 1)
+          CONTAINER_NAME=$(docker-compose -f docker-compose-prod.yml ps -q | head -n 1)
           if [ -z "$CONTAINER_NAME" ]; then
             echo "No containers found, failing the step."
             exit 1
@@ -53,9 +53,9 @@ jobs:
       # 推送镜像到 kworlds's Docker Hub
       - name: Push Docker image to Kworlds's Docker Hub
         if: success()
-        run: docker push dockerhub.kworlds.cn/pure-drf-api:dev
+        run: docker push dockerhub.kworlds.cn/pure-drf-api:latest
       
       # 更新开发环境镜像并重启容器
       - name: Deploy to remote server
         if: success()
-        run: sshpass -p ${{ secrets.HOST_USER_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ vars.HOST_USER_NAME }}@${{ vars.HOST}} "cd ${{ vars.COMPOSE_FILE_PATH }} && docker-compose pull && docker-compose down && docker-compose up -d"
+        run: sshpass -p ${{ secrets.HOST_USER_PASSWORD_PROD }} ssh -o StrictHostKeyChecking=no ${{ vars.HOST_USER_NAME_PROD }}@${{ vars.HOST_PROD}} "cd ${{ vars.COMPOSE_FILE_PATH }} && docker-compose pull && docker-compose down && docker-compose up -d"
