[fix]修复自动部署登录bug

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -52,9 +52,9 @@ jobs:
 
       # 登录到 kworlds's Docker Hub
       - name: Login to Kworlds's Docker Hub
-        run: docker login -u ${{ vars.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
+        run: docker login dockerhub.kworlds.cn -u ${{ vars.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      # 推送镜像到 kworlds's Docker Hub
+      # 推送镜像到 kworlds's Docker Hub 
       - name: Push Docker image to Kworlds's Docker Hub
         if: success()
         run: docker push dockerhub.kworlds.cn/pure-drf-api:dev
