--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -52,7 +52,7 @@ jobs:
       
       # 登录到 kworlds's Docker Hub
       - name: Login to Kworlds's Docker Hub
-        run: docker login -u ${{ vars.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
+        run: docker login dockerhub.kworlds.cn -u ${{ vars.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       # 推送镜像到 kworlds's Docker Hub
       - name: Push Docker image to Kworlds's Docker Hub
