--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -62,4 +62,11 @@ jobs:
       # 更新开发环境镜像并重启容器
       - name: Deploy to remote server
         if: success()
-        run: sshpass -p ${{ secrets.HOST_USER_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ vars.HOST_USER_NAME }}@${{ vars.HOST}} "cd ${{ vars.COMPOSE_FILE_PATH }} && docker-compose pull && docker-compose down && docker-compose up -d"
+        run: |
+          sshpass -p "${{ secrets.HOST_USER_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ vars.HOST_USER_NAME }}@${{ vars.HOST }} << EOF
+            docker login dockerhub.kworlds.cn -u "${{ vars.DOCKER_HUB_USERNAME }}" -p "${{ secrets.DOCKER_HUB_PASSWORD }}"
+            cd "${{ vars.COMPOSE_FILE_PATH }}"
+            docker-compose pull
+            docker-compose down
+            docker-compose up -d
+          EOF
