[fix]修复清除docker registry命令的非交互报错

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -101,5 +101,5 @@ jobs:
             docker-compose pull
             docker-compose down
             docker-compose up -d
-            docker exec -it dockerhub registry garbage-collect /etc/docker/registry/config.yml
+            docker exec dockerhub registry garbage-collect /etc/docker/registry/config.yml
           EOF
