feat: 修改github action自动执行脚本为手动触发

--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -1,16 +1,16 @@
 name: Deploy DRF Application
 
-on:
-  push:
-    branches: 
-      - dev
-    paths-ignore:
-      - 'readme.md'
-  pull_request:
-    branches:
-      - dev
-    paths-ignore:
-      - 'readme.md'
+on: workflow_dispatch
+  # push:
+  #   branches: 
+  #     - dev
+  #   paths-ignore:
+  #     - 'readme.md'
+  # pull_request:
+  #   branches:
+  #     - dev
+  #   paths-ignore:
+  #     - 'readme.md'
 
 jobs:
   build_and_deploy:
