fix: 恢复自动触发

--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -1,16 +1,16 @@
 name: Deploy DRF Application
 
-on: workflow_dispatch
-  # push:
-  #   branches: 
-  #     - main
-  #   paths-ignore:
-  #     - 'readme.md'
-  # pull_request:
-  #   branches:
-  #     - main
-  #   paths-ignore:
-  #     - 'readme.md'
+on:
+  push:
+    branches: 
+      - main
+    paths-ignore:
+      - 'readme.md'
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - 'readme.md'
 
 jobs:
   build_and_deploy:
